--- a/style.css
+++ b/style.css
@@ -43,6 +43,20 @@ input.form, textarea {
     width: 50%;
     height: 40px;
 }
+.message {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: rgb(180, 179, 240);
+    display: none;
+}
+.message.success {
+    background-color: rgb(179, 240, 179);
+    display: block;
+}
+.message.danger {
+    background-color: rgb(240, 179, 179);
+    display: block;
+}
 @media screen and (max-width: 768px) {
    .flex {
     flex-direction: column;
